exec2_AgentSpeakL/agentSpeak.output
State 2 conflicts: 1 shift/reduce


Grammar

    0 $accept: agent $end

    1 agent: beliefs plans

    2 beliefs: beliefs belief
    3        | %empty

    4 belief: predicate '.'
    5       | error '.'

    6 predicate: T_ATOM '(' terms ')'

    7 plans: plans plan
    8      | %empty

    9 plan: triggering_event ':' context "<-" body '.'
   10     | error '.'

   11 triggering_event: '+' predicate
   12                 | '-' predicate
   13                 | '+' goal
   14                 | '-' goal

   15 context: "true"
   16        | cliterals

   17 cliterals: literal
   18          | literal '&' cliterals

   19 literal: predicate
   20        | "not" '(' predicate ')'

   21 goal: '!' predicate
   22     | '?' predicate

   23 body: "true"
   24     | actions

   25 actions: action
   26        | action ';' actions

   27 action: predicate
   28       | goal
   29       | belief_update

   30 belief_update: '+' predicate
   31              | '-' predicate

   32 terms: term
   33      | term ',' terms

   34 term: T_VAR
   35     | T_ATOM
   36     | T_NUMBER
   37     | T_ATOM '(' terms ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 21
'&' (38) 18
'(' (40) 6 20 37
')' (41) 6 20 37
'+' (43) 11 13 30
',' (44) 33
'-' (45) 12 14 31
'.' (46) 4 5 9 10
':' (58) 9
';' (59) 26
'?' (63) 22
error (256) 5 10
T_ATOM (258) 6 35 37
T_VAR (259) 34
T_NUMBER (260) 36
"<-" (261) 9
"true" (262) 15 23
"not" (263) 20


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
agent (21)
    on left: 1, on right: 0
beliefs (22)
    on left: 2 3, on right: 1 2
belief (23)
    on left: 4 5, on right: 2
predicate (24)
    on left: 6, on right: 4 11 12 19 20 21 22 27 30 31
plans (25)
    on left: 7 8, on right: 1 7
plan (26)
    on left: 9 10, on right: 7
triggering_event (27)
    on left: 11 12 13 14, on right: 9
context (28)
    on left: 15 16, on right: 9
cliterals (29)
    on left: 17 18, on right: 16 18
literal (30)
    on left: 19 20, on right: 17 18
goal (31)
    on left: 21 22, on right: 13 14 28
body (32)
    on left: 23 24, on right: 9
actions (33)
    on left: 25 26, on right: 24 26
action (34)
    on left: 27 28 29, on right: 25 26
belief_update (35)
    on left: 30 31, on right: 29
terms (36)
    on left: 32 33, on right: 6 33 37
term (37)
    on left: 34 35 36 37, on right: 32 33


State 0

    0 $accept: . agent $end

    $default  reduce using rule 3 (beliefs)

    agent    go to state 1
    beliefs  go to state 2


State 1

    0 $accept: agent . $end

    $end  shift, and go to state 3


State 2

    1 agent: beliefs . plans
    2 beliefs: beliefs . belief

    error   shift, and go to state 4
    T_ATOM  shift, and go to state 5

    $end   reduce using rule 8 (plans)
    error  [reduce using rule 8 (plans)]
    '+'    reduce using rule 8 (plans)
    '-'    reduce using rule 8 (plans)

    belief     go to state 6
    predicate  go to state 7
    plans      go to state 8


State 3

    0 $accept: agent $end .

    $default  accept


State 4

    5 belief: error . '.'

    '.'  shift, and go to state 9


State 5

    6 predicate: T_ATOM . '(' terms ')'

    '('  shift, and go to state 10


State 6

    2 beliefs: beliefs belief .

    $default  reduce using rule 2 (beliefs)


State 7

    4 belief: predicate . '.'

    '.'  shift, and go to state 11


State 8

    1 agent: beliefs plans .
    7 plans: plans . plan

    error  shift, and go to state 12
    '+'    shift, and go to state 13
    '-'    shift, and go to state 14

    $end  reduce using rule 1 (agent)

    plan              go to state 15
    triggering_event  go to state 16


State 9

    5 belief: error '.' .

    $default  reduce using rule 5 (belief)


State 10

    6 predicate: T_ATOM '(' . terms ')'

    T_ATOM    shift, and go to state 17
    T_VAR     shift, and go to state 18
    T_NUMBER  shift, and go to state 19

    terms  go to state 20
    term   go to state 21


State 11

    4 belief: predicate '.' .

    $default  reduce using rule 4 (belief)


State 12

   10 plan: error . '.'

    '.'  shift, and go to state 22


State 13

   11 triggering_event: '+' . predicate
   13                 | '+' . goal

    '!'     shift, and go to state 23
    '?'     shift, and go to state 24
    T_ATOM  shift, and go to state 5

    predicate  go to state 25
    goal       go to state 26


State 14

   12 triggering_event: '-' . predicate
   14                 | '-' . goal

    '!'     shift, and go to state 23
    '?'     shift, and go to state 24
    T_ATOM  shift, and go to state 5

    predicate  go to state 27
    goal       go to state 28


State 15

    7 plans: plans plan .

    $default  reduce using rule 7 (plans)


State 16

    9 plan: triggering_event . ':' context "<-" body '.'

    ':'  shift, and go to state 29


State 17

   35 term: T_ATOM .
   37     | T_ATOM . '(' terms ')'

    '('  shift, and go to state 30

    $default  reduce using rule 35 (term)


State 18

   34 term: T_VAR .

    $default  reduce using rule 34 (term)


State 19

   36 term: T_NUMBER .

    $default  reduce using rule 36 (term)


State 20

    6 predicate: T_ATOM '(' terms . ')'

    ')'  shift, and go to state 31


State 21

   32 terms: term .
   33      | term . ',' terms

    ','  shift, and go to state 32

    $default  reduce using rule 32 (terms)


State 22

   10 plan: error '.' .

    $default  reduce using rule 10 (plan)


State 23

   21 goal: '!' . predicate

    T_ATOM  shift, and go to state 5

    predicate  go to state 33


State 24

   22 goal: '?' . predicate

    T_ATOM  shift, and go to state 5

    predicate  go to state 34


State 25

   11 triggering_event: '+' predicate .

    $default  reduce using rule 11 (triggering_event)


State 26

   13 triggering_event: '+' goal .

    $default  reduce using rule 13 (triggering_event)


State 27

   12 triggering_event: '-' predicate .

    $default  reduce using rule 12 (triggering_event)


State 28

   14 triggering_event: '-' goal .

    $default  reduce using rule 14 (triggering_event)


State 29

    9 plan: triggering_event ':' . context "<-" body '.'

    T_ATOM  shift, and go to state 5
    "true"  shift, and go to state 35
    "not"   shift, and go to state 36

    predicate  go to state 37
    context    go to state 38
    cliterals  go to state 39
    literal    go to state 40


State 30

   37 term: T_ATOM '(' . terms ')'

    T_ATOM    shift, and go to state 17
    T_VAR     shift, and go to state 18
    T_NUMBER  shift, and go to state 19

    terms  go to state 41
    term   go to state 21


State 31

    6 predicate: T_ATOM '(' terms ')' .

    $default  reduce using rule 6 (predicate)


State 32

   33 terms: term ',' . terms

    T_ATOM    shift, and go to state 17
    T_VAR     shift, and go to state 18
    T_NUMBER  shift, and go to state 19

    terms  go to state 42
    term   go to state 21


State 33

   21 goal: '!' predicate .

    $default  reduce using rule 21 (goal)


State 34

   22 goal: '?' predicate .

    $default  reduce using rule 22 (goal)


State 35

   15 context: "true" .

    $default  reduce using rule 15 (context)


State 36

   20 literal: "not" . '(' predicate ')'

    '('  shift, and go to state 43


State 37

   19 literal: predicate .

    $default  reduce using rule 19 (literal)


State 38

    9 plan: triggering_event ':' context . "<-" body '.'

    "<-"  shift, and go to state 44


State 39

   16 context: cliterals .

    $default  reduce using rule 16 (context)


State 40

   17 cliterals: literal .
   18          | literal . '&' cliterals

    '&'  shift, and go to state 45

    $default  reduce using rule 17 (cliterals)


State 41

   37 term: T_ATOM '(' terms . ')'

    ')'  shift, and go to state 46


State 42

   33 terms: term ',' terms .

    $default  reduce using rule 33 (terms)


State 43

   20 literal: "not" '(' . predicate ')'

    T_ATOM  shift, and go to state 5

    predicate  go to state 47


State 44

    9 plan: triggering_event ':' context "<-" . body '.'

    '!'     shift, and go to state 23
    '?'     shift, and go to state 24
    T_ATOM  shift, and go to state 5
    "true"  shift, and go to state 48
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50

    predicate      go to state 51
    goal           go to state 52
    body           go to state 53
    actions        go to state 54
    action         go to state 55
    belief_update  go to state 56


State 45

   18 cliterals: literal '&' . cliterals

    T_ATOM  shift, and go to state 5
    "not"   shift, and go to state 36

    predicate  go to state 37
    cliterals  go to state 57
    literal    go to state 40


State 46

   37 term: T_ATOM '(' terms ')' .

    $default  reduce using rule 37 (term)


State 47

   20 literal: "not" '(' predicate . ')'

    ')'  shift, and go to state 58


State 48

   23 body: "true" .

    $default  reduce using rule 23 (body)


State 49

   30 belief_update: '+' . predicate

    T_ATOM  shift, and go to state 5

    predicate  go to state 59


State 50

   31 belief_update: '-' . predicate

    T_ATOM  shift, and go to state 5

    predicate  go to state 60


State 51

   27 action: predicate .

    $default  reduce using rule 27 (action)


State 52

   28 action: goal .

    $default  reduce using rule 28 (action)


State 53

    9 plan: triggering_event ':' context "<-" body . '.'

    '.'  shift, and go to state 61


State 54

   24 body: actions .

    $default  reduce using rule 24 (body)


State 55

   25 actions: action .
   26        | action . ';' actions

    ';'  shift, and go to state 62

    $default  reduce using rule 25 (actions)


State 56

   29 action: belief_update .

    $default  reduce using rule 29 (action)


State 57

   18 cliterals: literal '&' cliterals .

    $default  reduce using rule 18 (cliterals)


State 58

   20 literal: "not" '(' predicate ')' .

    $default  reduce using rule 20 (literal)


State 59

   30 belief_update: '+' predicate .

    $default  reduce using rule 30 (belief_update)


State 60

   31 belief_update: '-' predicate .

    $default  reduce using rule 31 (belief_update)


State 61

    9 plan: triggering_event ':' context "<-" body '.' .

    $default  reduce using rule 9 (plan)


State 62

   26 actions: action ';' . actions

    '!'     shift, and go to state 23
    '?'     shift, and go to state 24
    T_ATOM  shift, and go to state 5
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50

    predicate      go to state 51
    goal           go to state 52
    actions        go to state 63
    action         go to state 55
    belief_update  go to state 56


State 63

   26 actions: action ';' actions .

    $default  reduce using rule 26 (actions)
